# agent-backstage

./: Dockerfile  MAINTAINERS.md  Makefile  README.md  langgraph.json  pyproject.toml
a2a-python/: pyproject.toml
agent_backstage/: __init__.py  __main__.py  agent.py  langgraph.py  models.py  state.py
agent_backstage/backstage_mcp/: README.md  pyproject.toml  server.py
agent_backstage/backstage_mcp/api/: client.py
agent_backstage/backstage_mcp/models/: AnalyzeLocationEntityField.py  AnalyzeLocationExistingEntity.py  AnalyzeLocationResponse.py  EntityAncestryResponse.py  EntityFacetsResponse.py  EntityMeta.py  EntityRelation.py  Error.py  Location.py  LocationInput.py  LocationSpec.py  NullableEntity.py  RecursivePartialEntityMeta.py
agent_backstage/backstage_mcp/tools/: analyze-location.py  analyze_location.py  component.py  entities.py  entities_by-query.py  entities_by-refs.py  entities_by_query.py  entities_by_refs.py  entity-facets.py  entity_facets.py  locations.py  project.py  refresh.py  user_catalog.py  user_groups.py  user_projects.py  validate-entity.py  validate_entity.py
agent_backstage/mcp_backstage/: README.md  pyproject.toml
agent_backstage/mcp_backstage/mcp_catalog/: server.py
agent_backstage/mcp_backstage/mcp_catalog/models/: AnalyzeLocationGenerateEntity.py  EntitiesBatchResponse.py  EntitiesQueryResponse.py  Entity.py  EntityFacet.py  EntityLink.py  JsonObject.py  MapStringString.py  RecursivePartialEntity.py  RecursivePartialEntityRelation.py
agent_backstage/mcp_backstage/mcp_catalog/tools/: analyze_location.py  entities.py  entities_by_query.py  entities_by_refs.py  entity_facets.py  locations.py  refresh.py  validate_entity.py
client/: client_agent.py  client_curl.sh
deploy/acp/: agent.json
helm/agent-backstage/: Chart.yaml  values.yaml
helm/agent-backstage/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
